[package]
name = "unsafe_from"
version = "1.0"
description = "Unsafe versions of standard library `From<T>` and `Into<T>`."
authors = ["prostomarkeloff <28061158+prostomarkeloff@users.noreply.github.com>"]
edition = "2018"
readme = "readme.md"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
